--- a/Inicio.html
+++ b/Inicio.html
@@ -20,6 +20,7 @@
 
 
     <!-- Aca va el contenido de la barra de navegacion ufff -->
+
     <nav class="navbar navbar-expand-lg " style="background-color:#42467D" p-3>
         <div class="container-fluid">
           <a class="navbar-brand" href="./Inicio.html">
@@ -32,16 +33,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
+
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">FAQ</a>
+                <a class="nav-link" href="./Empresas.html">Empresas</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Empresas</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="#">Inversores</a>
+                <a class="nav-link" href="./Inversionistas.html">Inversores</a>
               </li>
           </div>
         </div>
@@ -49,8 +47,9 @@
         <!-- Esta es la seccion de los botones de la barra -->
 
         <form class="container-fluid justify-content-end">
-          <button type="button" class="btn btn-danger btn-lg me-3">Inicia sesión</button>
-          <button type="button" class="btn btn-primary btn-lg">Regitrarse</button>
+          <a href="./PanelSesion.html" class="btn btn-danger me-2" tabindex="-1" role="button"> Iniciar sesion</a>
+          <a href="./PanelRegistro.html" class="btn btn-primary me-2" tabindex="-1" role="button">Registrarse</a>
+    
         </form>
       </nav>
     
