--- a/Empresas.html
+++ b/Empresas.html
@@ -36,7 +36,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Inversores</a>
+          <a class="nav-link" href="./Inversionistas.html">Inversores</a>
         </li>
     </div>
   </div>
